// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopover children is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="test-id"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorDownCenter testClass1 testClass2"
  data-test-subj="test subject string"
  id="test-id"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover outside click detector is not rendered when closed 1`] = `
<div
  aria-label="aria-label"
  className="euiPopover euiPopover--anchorDownCenter testClass1 testClass2"
  data-test-subj="test subject string"
  id="test-id"
  onKeyDown={[Function]}
>
  <div
    className="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition defaults to centerDown 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="test-id"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition downRight is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownRight"
  id="test-id"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition leftCenter is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorLeftCenter"
  id="test-id"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props isOpen defaults to false 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="test-id"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props isOpen renders outside click detector when open 1`] = `
<EuiOutsideClickDetector
  onOutsideClick={[Function]}
>
  <div
    aria-label="aria-label"
    className="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen testClass1 testClass2"
    data-test-subj="test subject string"
    id="test-id"
    onKeyDown={[Function]}
  >
    <div
      className="euiPopover__anchor"
    >
      <button />
    </div>
    <EuiPortal>
      <FocusTrap
        _createFocusTrap={[Function]}
        active={false}
        focusTrapOptions={
          Object {
            "clickOutsideDeactivates": true,
            "initialFocus": undefined,
          }
        }
        paused={false}
        tag="div"
      >
        <EuiPanel
          aria-live="assertive"
          className="euiPopover__panel euiPopover__panel--null euiPopover__panel-isOpen"
          grow={true}
          hasShadow={false}
          paddingSize="m"
          panelRef={[Function]}
          style={
            Object {
              "left": 50,
              "top": 50,
            }
          }
        >
          <div
            className="euiPopover__panelArrow euiPopover__panelArrow--null"
            style={Object {}}
          />
          <EuiMutationObserver
            observerOptions={
              Object {
                "attributes": true,
                "characterData": true,
                "childList": true,
                "subtree": true,
              }
            }
            onMutation={[Function]}
          >
            Children
          </EuiMutationObserver>
        </EuiPanel>
      </FocusTrap>
    </EuiPortal>
  </div>
</EuiOutsideClickDetector>
`;

exports[`EuiPopover props isOpen renders true 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
    id="test-id"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        aria-live="assertive"
        class="euiPanel euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
        style="top: 16px; left: -22px; z-index: 0;"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPopover props ownFocus defaults to false 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
    id="test-id"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        aria-live="assertive"
        class="euiPanel euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
        style="top: 16px; left: -22px; z-index: 0;"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPopover props ownFocus renders true 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
    id="test-id"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <p
        class="euiScreenReaderOnly"
        role="alert"
      >
        You are in a popup. To exit this popup, hit escape.
      </p>
      <div
        aria-live="off"
        class="euiPanel euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
        style="top: 16px; left: -22px; z-index: 0;"
        tabindex="0"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPopover props panelClassName is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
    id="test-id"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        aria-live="assertive"
        class="euiPanel euiPanel--paddingMedium euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen test"
        style="top: 16px; left: -22px; z-index: 0;"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPopover props panelPaddingSize is rendered 1`] = `
<div>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiPopover-isOpen"
    id="test-id"
  >
    <div
      class="euiPopover__anchor"
    >
      <button />
    </div>
    <div>
      <div
        aria-live="assertive"
        class="euiPanel euiPanel--paddingSmall euiPopover__panel euiPopover__panel--bottom euiPopover__panel-isOpen"
        style="top: 16px; left: -22px; z-index: 0;"
      >
        <div
          class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
          style="left: 10px; top: 0px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiPopover props withTitle is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--withTitle"
  id="test-id"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;
